# bi-portfolio

./: .gitignore  LICENSE  QUICKSTART.md  README.md  debug_forecast.py  pyproject.toml  pytest.ini  requirements-windows.txt  requirements.txt  run_backtest.py  setup.py  test_forecaster.py
airflow/: dag_bi_portfolio.py
data/raw/: sample_esg_data.csv  sample_sales_data.csv
dbt/: validate_implementation.sql
dbt/macros/: custom_generic_tests.sql  test_business_logic.sql
dbt/models/customer_insights/: README.md
dbt/models/finance/: fact_financial_monthly.sql  stg_sales_data.sql  stg_sales_transactions.sql
dbt/models/supply_chain/: README.md  fact_supply_chain_monthly.sql  mart_supply_chain_summary.sql  stg_supply_chain_data.sql
dbt/models/sustainability/: fact_esg_monthly.sql  mart_esg_summary.sql  stg_esg_data.sql  stg_esg_transactions.sql
dbt/tests/: test_business_logic.sql  test_esg_calculations.sql  test_material_percentages.sql  test_profit_margin_calculation.sql  test_supply_chain_calculations.sql  test_supply_chain_fact_calculations.sql  test_transaction_revenue_calculation.sql
deployment/: Dockerfile
docs/: DATA_ARCHITECTURE.md  DATA_BROWSER.md  DATA_VALIDATION_ANSWERS.md  ENHANCED_FORECASTING.md  RESPONSIVE_LAYOUT_GUIDE.md  SUPPLY_CHAIN_SETUP.md  TESTING_GUIDE.md
ecometrics/: DEPLOYMENT_INFO.md  Home.py  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  color_config.py  create_sample_db.py  data_connector.py  debug_deployment.py  prepare_for_deployment.py  requirements.txt  test_color_standardization.py  test_deployment.py
ecometrics/pages/: 1_ESG_Insights.py  2_Financial_Analysis.py  3_Supply_Chain_Insights.py  4_Customer_Insights.py  5_Data_Browser.py  6_Forecasting.py
notebooks/: customer_insights_eda.ipynb  finance_forecasting.ipynb  supply_chain_eda.ipynb  sustainability_eda.ipynb
scripts/: run_tests.py  test_dbt_setup.py  test_enhanced_forecasting.py  test_supply_chain_setup.py
src/packagingco_insights/: __init__.py
src/packagingco_insights/analysis/: __init__.py  esg_analysis.py  finance_analysis.py  forecasting.py  supply_chain_analysis.py
src/packagingco_insights/utils/: __init__.py  data_generator.py  data_loader.py  visualization.py
streamlit_app/: EcoMetrics.py  README.md  app.py  requirements.txt  setup_dbt.py
streamlit_app/components/: __init__.py  shared_controls.py
streamlit_app/pages/: 0_Overview.py  1_🌱_ESG_Insights.py  2_💰_Financial_Analysis.py  3_📈_Forecasting.py  4_🔄_Combined_Insights.py  5_📋_Data_Browser.py
streamlit_app_old/: DEPLOYMENT_GUIDE.md  EcoMetrics.py
streamlit_app_old/components/: responsive_layout.py
streamlit_app_old/pages/: 1_🌱_ESG_Insights.py  2_💰_Financial_Analysis.py  3_📈_Forecasting.py  5_📋_Data_Browser.py
tests/: __init__.py  conftest.py  test_basic.py  test_esg_analysis.py  test_finance_analysis.py  test_forecasting.py  test_integration.py  test_supply_chain_analysis.py  test_utils.py
